--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,12 +24,12 @@ jobs:
           # a new item to the following lists.
           # You can see the complete list of services and versions that are available at:
           # https://docker-services-cli.readthedocs.io/en/latest/configuration.html
-          python-version: [3.8, 3.9]
+          python-version: [3.6, 3.7, 3.8, 3.9]
           requirements-level: [min, pypi]
           cache-service: [redis]
-          db-service: [postgresql12]
+          db-service: [postgresql9, postgresql11, mysql5, mysql8]
           mq-service: [rabbitmq, redis]
-          search-service: [elasticsearch7, opensearch2]
+          search-service: [elasticsearch6, elasticsearch7]
 
           exclude:
           # Add combinations to this list that should be excluded from the final
@@ -42,13 +42,13 @@ jobs:
           - python-version: 3.9
             requirements-level: min
 
-          - search-service: elasticsearch7
-            db-service: postgresql11
+          - db-service: postgresql11
+            python-version: 3.8
 
           - search-service: elasticsearch7
-            db-service: postgresql12
+            python-version: 3.8
 
-          - search-service: opensearch2
+          - search-service: elasticsearch6
             db-service: postgresql11
 
           - search-service: opensearch2
@@ -61,11 +61,11 @@ jobs:
           - db-service: postgresql12
             DB_EXTRAS: "postgresql"
 
-          - search-service: elasticsearch7
-            SEARCH_EXTRAS: "elasticsearch7"
-
           - search-service: opensearch2
             SEARCH_EXTRAS: "opensearch2"
+
+          - search-service: elasticsearch7
+            SEARCH_EXTRAS: "elasticsearch7"
 
     env:
       CACHE: ${{ matrix.cache-service }}
