--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,12 +24,12 @@ jobs:
           # a new item to the following lists.
           # You can see the complete list of services and versions that are available at:
           # https://docker-services-cli.readthedocs.io/en/latest/configuration.html
-          python-version: [3.6, 3.7, 3.8, 3.9]
+          python-version: [3.8, 3.9]
           requirements-level: [min, pypi]
           cache-service: [redis]
-          db-service: [postgresql9, postgresql11, mysql5, mysql8]
+          db-service: [postgresql11, postgresql11]
           mq-service: [rabbitmq, redis]
-          search-service: [elasticsearch6, elasticsearch7]
+          search-service: [elasticsearch7, opensearch2]
 
           exclude:
           # Add combinations to this list that should be excluded from the final
