--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: master
+    branches: main
   pull_request:
-    branches: master
+    branches: main
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 3 * * 6'
@@ -20,61 +20,17 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-          # You can add/remove combinations e.g. `dev` requirements or `postgresql13` by adding
-          # a new item to the following lists.
-          # You can see the complete list of services and versions that are available at:
-          # https://docker-services-cli.readthedocs.io/en/latest/configuration.html
           python-version: [3.8, 3.9]
-          requirements-level: [min, pypi]
-          cache-service: [redis]
-          db-service: [postgresql11, postgresql11]
-          mq-service: [rabbitmq, redis]
-          search-service: [elasticsearch7, opensearch2]
-
-          exclude:
-          # Add combinations to this list that should be excluded from the final
-          # build. Doing this will help keeping the number of jobs down.
-          # E.g. removing 3.8 - min combination will avoid 8 jobs to be submited
-          # [3.8] * [min] * [postgresql9, postgresql11, mysql5, mysql8] * [elasticsearch6, elasticsearch7]
-          - python-version: 3.8
-            requirements-level: min
-
-          - python-version: 3.9
-            requirements-level: min
-
-          - db-service: postgresql11
-            python-version: 3.8
-
-          - search-service: elasticsearch7
-            python-version: 3.8
-
-          - search-service: elasticsearch7
-            db-service: postgresql11
-
-          - search-service: opensearch2
-            db-service: postgresql12
-
+          requirements-level: [pypi]
+          db-service: [postgresql12]
+          search-service: [opensearch2,elasticsearch7]
           include:
-          - db-service: postgresql11
-            DB_EXTRAS: "postgresql"
-
           - db-service: postgresql12
             DB_EXTRAS: "postgresql"
-
-          - search-service: opensearch2
-            SEARCH_EXTRAS: "opensearch2"
-
-          - search-service: elasticsearch7
-            SEARCH_EXTRAS: "elasticsearch7"
-
     env:
-      CACHE: ${{ matrix.cache-service }}
       DB: ${{ matrix.db-service }}
-      MQ: ${{ matrix.mq-service }}
       SEARCH: ${{ matrix.search-service }}
-      # TODO: Adapt EXTRAS accordingly
-      EXTRAS: "postgresql, opensearch2, elasticsearch7"
-
+      EXTRAS: tests,${{ matrix.search-service }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
