Added tests for create communities, added useful output for wrong input and updated README partially

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: [3.8, 3.9]
           requirements-level: [pypi]
           db-service: [postgresql12]
-          search-service: [opensearch2,elasticsearch7]
+          search-service: [opensearch2]
           include:
           - db-service: postgresql12
             DB_EXTRAS: "postgresql"
